kubernetes/apps/node-red/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  namespace: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
        - name: node-red
          image: nodered/node-red:latest
          ports:
            - containerPort: 1880
          volumeMounts:
            - name: node-red-storage
              mountPath: /data
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

      volumes:
        - name: node-red-storage
          persistentVolumeClaim:
            claimName: node-red-pvc
        - name: node-red-flows-import
          configMap:
            name: node-red-flows

---
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: node-red
spec:
  selector:
    app: node-red
  ports:
    - port: 1880
      targetPort: 1880
