kubernetes/apps/node-red/manifests/service-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red-local
  namespace: node-red
spec:
  selector:
    serving.knative.dev/service: node-red-knative
  ports:
    - name: http
      port: 80
      targetPort: 8012
  type: ClusterIP
