kubernetes/apps/node-red/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: node-red
  namespace: node-red

spec:
  selector:
    app: node-red

  ports:
    - name: http
      port: 1880
      targetPort: 1880

  type: ClusterIP
